--- a/package.json
+++ b/package.json
@@ -10,12 +10,21 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo-google-fonts/lato": "^0.2.2",
+    "@expo-google-fonts/oswald": "^0.2.2",
+    "@react-native-community/eslint-config": "^3.0.3",
+    "eslint": "^8.19.0",
     "expo": "~45.0.0",
+    "expo-font": "~10.1.0",
     "expo-status-bar": "~1.3.0",
+    "prettier": "^2.7.1",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-web": "0.17.7"
+    "react-native-paper": "^4.12.2",
+    "react-native-web": "0.17.7",
+    "styled-components": "^5.3.5",
+    "react-native-svg": "12.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
