--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@react-native-community/eslint-config": "^3.0.3",
     "@react-navigation/bottom-tabs": "^6.3.1",
     "@react-navigation/native": "^6.0.10",
+    "@react-navigation/stack": "^6.2.2",
+    "camelize": "^1.0.0",
     "eslint": "^8.19.0",
     "expo": "~45.0.0",
     "expo-font": "~10.1.0",
@@ -28,7 +30,8 @@
     "react-native-screens": "~3.11.1",
     "react-native-svg": "12.3.0",
     "react-native-web": "0.17.7",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.3.5",
+    "react-native-gesture-handler": "~2.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9"
